--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font-size: 15px;
   display: flex;
   justify-content: center;
-  aling-items:center;
+  align-items:center;
   padding:2rem;
   min-height:100vh;
 
